fix navigation on mobile with variable length of items

--- a/components/author-content/author-content.css
+++ b/components/author-content/author-content.css
@@ -15,7 +15,7 @@
 @media screen and (max-width: 700px) {
   .author-content {
     grid-template-columns: 1fr;
-    margin-top: 75px;
+    margin-top: var(--mobile-navigation-item-height);
   }
 }
 
