--- a/components/footer/footer.css
+++ b/components/footer/footer.css
@@ -29,7 +29,7 @@
 
 .footer-map {
   width: 100%;
-  aspect-ratio: 1 / 1;
+  aspect-ratio: 4 / 3;
   border: 0;
 }
 
